src/com/bmstu/com/bmstu/interpreterParser.java
// Generated from D:/Google Drive/vault/Courseproj/interpteter/src/com/bmstu\interpreter.g4 by ANTLR 4.5.1
package com.bmstu;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class interpreterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VECT=1, MATR=2, IMACRO=3, IPRINT=4, SWITCHOP=5, CASEOP=6, DEFOP=7, AT=8, 
		IN=9, VMUL=10, HMUL=11, INV=12, TRANSP=13, TEXT=14, OR=15, AND=16, GEQ=17, 
		LEQ=18, NEQ=19, EQ=20, GE=21, LE=22, PLUS=23, MINUS=24, MUL=25, POWOP=26, 
		DIV=27, LCURLB=28, RCURLB=29, LPAREN=30, RPAREN=31, LBRACK=32, RBRACK=33, 
		BAR=34, UNDERLN=35, ASGNOP=36, DOT=37, COMMA=38, SMCOLON=39, IDENT=40, 
		NUM=41, LTEXT=42, RTEXT=43, SPECSYM=44, CYRSYM=45, NEWLINE=46, WS=47;
	public static final int
		RULE_start = 0, RULE_code = 1, RULE_cnstrct = 2, RULE_lgcexpr = 3, RULE_lgcand = 4, 
		RULE_cmpeq = 5, RULE_cmpr = 6, RULE_expr = 7, RULE_term = 8, RULE_factor = 9, 
		RULE_pow = 10, RULE_prim = 11, RULE_index = 12, RULE_vect = 13, RULE_matr = 14, 
		RULE_literal = 15, RULE_assgn = 16, RULE_lop = 17, RULE_rop = 18, RULE_cond = 19, 
		RULE_cond1 = 20, RULE_mcase = 21, RULE_mdefault = 22, RULE_loop = 23, 
		RULE_loopcnd = 24, RULE_func = 25, RULE_args = 26;
	public static final String[] ruleNames = {
		"start", "code", "cnstrct", "lgcexpr", "lgcand", "cmpeq", "cmpr", "expr", 
		"term", "factor", "pow", "prim", "index", "vect", "matr", "literal", "assgn", 
		"lop", "rop", "cond", "cond1", "mcase", "mdefault", "loop", "loopcnd", 
		"func", "args"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\\vect'", "'\\matr'", "'\\imacro'", "'\\iprint'", "'\\conditional'", 
		"'\\case'", "'\\otherwise'", "'\\at'", "'\\in'", "'\\times'", "'\\hidemul'", 
		"'\\inverse'", "'\\transpose'", "'\\text'", "'\\or'", "'\\and'", "'\\ge'", 
		"'\\le'", "'\\ne'", "'='", "'>'", "'<'", "'+'", "'-'", "'\\cdot'", "'^'", 
		"'/'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'|'", "'_'", "':='", 
		"'.'", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "VECT", "MATR", "IMACRO", "IPRINT", "SWITCHOP", "CASEOP", "DEFOP", 
		"AT", "IN", "VMUL", "HMUL", "INV", "TRANSP", "TEXT", "OR", "AND", "GEQ", 
		"LEQ", "NEQ", "EQ", "GE", "LE", "PLUS", "MINUS", "MUL", "POWOP", "DIV", 
		"LCURLB", "RCURLB", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "BAR", "UNDERLN", 
		"ASGNOP", "DOT", "COMMA", "SMCOLON", "IDENT", "NUM", "LTEXT", "RTEXT", 
		"SPECSYM", "CYRSYM", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "interpreter.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public interpreterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(interpreterParser.EOF, 0); }
		public List<TerminalNode> IMACRO() { return getTokens(interpreterParser.IMACRO); }
		public TerminalNode IMACRO(int i) {
			return getToken(interpreterParser.IMACRO, i);
		}
		public List<TerminalNode> LCURLB() { return getTokens(interpreterParser.LCURLB); }
		public TerminalNode LCURLB(int i) {
			return getToken(interpreterParser.LCURLB, i);
		}
		public List<TerminalNode> RCURLB() { return getTokens(interpreterParser.RCURLB); }
		public TerminalNode RCURLB(int i) {
			return getToken(interpreterParser.RCURLB, i);
		}
		public List<TerminalNode> IPRINT() { return getTokens(interpreterParser.IPRINT); }
		public TerminalNode IPRINT(int i) {
			return getToken(interpreterParser.IPRINT, i);
		}
		public List<CnstrctContext> cnstrct() {
			return getRuleContexts(CnstrctContext.class);
		}
		public CnstrctContext cnstrct(int i) {
			return getRuleContext(CnstrctContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(interpreterParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(interpreterParser.NEWLINE, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMACRO || _la==IPRINT) {
				{
				setState(82);
				switch (_input.LA(1)) {
				case IMACRO:
					{
					setState(54);
					match(IMACRO);
					setState(55);
					match(LCURLB);
					setState(62); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(56);
						cnstrct();
						setState(58); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(57);
							match(NEWLINE);
							}
							}
							setState(60); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NEWLINE );
						}
						}
						setState(64); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VECT) | (1L << MATR) | (1L << SWITCHOP) | (1L << INV) | (1L << TRANSP) | (1L << MINUS) | (1L << LPAREN) | (1L << BAR) | (1L << IDENT) | (1L << NUM))) != 0) );
					setState(66);
					match(RCURLB);
					}
					break;
				case IPRINT:
					{
					setState(68);
					match(IPRINT);
					setState(69);
					match(LCURLB);
					setState(76); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(70);
						cnstrct();
						setState(72); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(71);
							match(NEWLINE);
							}
							}
							setState(74); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NEWLINE );
						}
						}
						setState(78); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VECT) | (1L << MATR) | (1L << SWITCHOP) | (1L << INV) | (1L << TRANSP) | (1L << MINUS) | (1L << LPAREN) | (1L << BAR) | (1L << IDENT) | (1L << NUM))) != 0) );
					setState(80);
					match(RCURLB);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public List<CnstrctContext> cnstrct() {
			return getRuleContexts(CnstrctContext.class);
		}
		public CnstrctContext cnstrct(int i) {
			return getRuleContext(CnstrctContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				cnstrct();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VECT) | (1L << MATR) | (1L << SWITCHOP) | (1L << INV) | (1L << TRANSP) | (1L << MINUS) | (1L << LPAREN) | (1L << BAR) | (1L << IDENT) | (1L << NUM))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CnstrctContext extends ParserRuleContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public AssgnContext assgn() {
			return getRuleContext(AssgnContext.class,0);
		}
		public LgcexprContext lgcexpr() {
			return getRuleContext(LgcexprContext.class,0);
		}
		public CnstrctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cnstrct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterCnstrct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitCnstrct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitCnstrct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CnstrctContext cnstrct() throws RecognitionException {
		CnstrctContext _localctx = new CnstrctContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cnstrct);
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				cond();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				loop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				assgn();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				lgcexpr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LgcexprContext extends ParserRuleContext {
		public LgcandContext lgcand() {
			return getRuleContext(LgcandContext.class,0);
		}
		public LgcexprContext lgcexpr() {
			return getRuleContext(LgcexprContext.class,0);
		}
		public TerminalNode OR() { return getToken(interpreterParser.OR, 0); }
		public LgcexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lgcexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterLgcexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitLgcexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitLgcexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LgcexprContext lgcexpr() throws RecognitionException {
		return lgcexpr(0);
	}

	private LgcexprContext lgcexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LgcexprContext _localctx = new LgcexprContext(_ctx, _parentState);
		LgcexprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_lgcexpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(101);
			lgcand(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LgcexprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lgcexpr);
					setState(103);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(104);
					match(OR);
					setState(105);
					lgcand(0);
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LgcandContext extends ParserRuleContext {
		public CmpeqContext cmpeq() {
			return getRuleContext(CmpeqContext.class,0);
		}
		public LgcandContext lgcand() {
			return getRuleContext(LgcandContext.class,0);
		}
		public TerminalNode AND() { return getToken(interpreterParser.AND, 0); }
		public LgcandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lgcand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterLgcand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitLgcand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitLgcand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LgcandContext lgcand() throws RecognitionException {
		return lgcand(0);
	}

	private LgcandContext lgcand(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LgcandContext _localctx = new LgcandContext(_ctx, _parentState);
		LgcandContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_lgcand, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(112);
			cmpeq(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LgcandContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lgcand);
					setState(114);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(115);
					match(AND);
					setState(116);
					cmpeq(0);
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CmpeqContext extends ParserRuleContext {
		public CmprContext cmpr() {
			return getRuleContext(CmprContext.class,0);
		}
		public CmpeqContext cmpeq() {
			return getRuleContext(CmpeqContext.class,0);
		}
		public TerminalNode EQ() { return getToken(interpreterParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(interpreterParser.NEQ, 0); }
		public CmpeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmpeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterCmpeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitCmpeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitCmpeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmpeqContext cmpeq() throws RecognitionException {
		return cmpeq(0);
	}

	private CmpeqContext cmpeq(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CmpeqContext _localctx = new CmpeqContext(_ctx, _parentState);
		CmpeqContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_cmpeq, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(123);
			cmpr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(131);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new CmpeqContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpeq);
						setState(125);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(126);
						match(EQ);
						setState(127);
						cmpr(0);
						}
						break;
					case 2:
						{
						_localctx = new CmpeqContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpeq);
						setState(128);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(129);
						match(NEQ);
						setState(130);
						cmpr(0);
						}
						break;
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CmprContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CmprContext cmpr() {
			return getRuleContext(CmprContext.class,0);
		}
		public TerminalNode LE() { return getToken(interpreterParser.LE, 0); }
		public TerminalNode LEQ() { return getToken(interpreterParser.LEQ, 0); }
		public TerminalNode GE() { return getToken(interpreterParser.GE, 0); }
		public TerminalNode GEQ() { return getToken(interpreterParser.GEQ, 0); }
		public CmprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterCmpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitCmpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitCmpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmprContext cmpr() throws RecognitionException {
		return cmpr(0);
	}

	private CmprContext cmpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CmprContext _localctx = new CmprContext(_ctx, _parentState);
		CmprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_cmpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(137);
			expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(153);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(151);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new CmprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpr);
						setState(139);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(140);
						match(LE);
						setState(141);
						expr(0);
						}
						break;
					case 2:
						{
						_localctx = new CmprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpr);
						setState(142);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(143);
						match(LEQ);
						setState(144);
						expr(0);
						}
						break;
					case 3:
						{
						_localctx = new CmprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpr);
						setState(145);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(146);
						match(GE);
						setState(147);
						expr(0);
						}
						break;
					case 4:
						{
						_localctx = new CmprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_cmpr);
						setState(148);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(149);
						match(GEQ);
						setState(150);
						expr(0);
						}
						break;
					}
					} 
				}
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(interpreterParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(interpreterParser.MINUS, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interpreterListener ) ((interpreterListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interpreterVisitor ) return ((interpreterVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(157);
			term(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(167);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(165);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(159);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(160);
						match(PLUS);
						setState(161);
						term(0);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(162);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(163);
						match(MINUS);
						setState(164);
						term(0);
						}
						break;
					}
					} 
				}
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
